--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 	<nav id="navigation" class="navbar navbar-expand-lg">
-	  <!-- <a class="navbar-brand" href="#">Gurpinder Singh</a> -->
+	  <!-- <a class="navbar-brand" href="#">Adrien Nguesseu</a> -->
 
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
 			<div class="row">
 
 				<div class="col-md-5">
-					<img class="aboutImage" src="img/mypic.JPG">
+					<img class="aboutImage" src="adrien_nguess_photo.jpg">
 				</div>
 
 				<div class="col-md-7">
