--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					</div>
 				</div>
 
-<!-- 				<div class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -285,7 +285,7 @@
 							<div class="squareContent">
                                 <h2 class="counter">5</h2>
                                 <h3>Clients</h3>
-                            </div> -->
+                            </div> 
 						</div>
 					</div>
 				</div>
