--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 						<li>Collaborating with cross-functional teams to ensure delivery of high quality and reliable product and participating in code reviews.</li>
 						<li>Improving the application performance by conducting Unit testing by using Jest, Enzyme as React.js testing tools.</li>
 						<li>Ensuring that customers are getting billed properly by developing an automated solution to detect and fixing issues categories related to the ordering.</li>
-						<p><span style="color: rgba(0, 0, 0, 0.721);">Keywords:</span> TypeScript, ReactJs v16+, CSS3, HTML5, Axios, Fetch API, NextJs, GraphQL, Redux, Sass </p>
+						<p><span style="font-weight:bold; color: rgba(0, 0, 0, 0.721);">Keywords:</span> TypeScript, ReactJs v16+, CSS3, HTML5, Axios, Fetch API, NextJs, GraphQL, Redux, Sass </p>
 
 <p>
 							<h4>SiriusXM</h4>
