--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="row">
 
 				
-				<div class="col-md-3 col-sm-6">
+				<div style="text-align: center;" class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -276,7 +276,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6">
+<!-- 				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -285,12 +285,12 @@
 							<div class="squareContent">
                                 <h2 class="counter">5</h2>
                                 <h3>Clients</h3>
-                            </div> 
+                            </div>  -->
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6">
+<!-- 				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -298,13 +298,13 @@
 							</div>
 							<div class="squareContent">
                                 <h2 class="counter">2</h2>
-                                <h3>iOS Apps</h3>
+                                <h3>iOS Apps</h3> -->
                             </div>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-3 col-sm-6">
+<!-- 				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -313,7 +313,7 @@
 							<div class="squareContent">
                                 <h2 class="counter">4</h2>
                                 <h3>Websites Made</h3>
-                            </div>
+                            </div> -->
 						</div>
 					</div>
 				</div>
