--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="row">
 
 				
-				<div style="text-align: center;" class="col-md-3 col-sm-6">
+				<div style="text-align: center; margin:auto;" class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
