--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 	<div class="copyrightSection">
 
 		<div class="col-md-12 text-center">
-			<p>&copy; Copyright Gurpinder Singh 2020</p>
+			<p>&copy; Copyright Adrien Nguesseu 2024</p>
 		</div>
 
 	</div>
