--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="row">
 
 				
-				<div style="text-align: center; margin:auto;" class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -276,35 +276,35 @@
 					</div>
 				</div>
 
-<!-- 				<div class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
 								<i class="fa fa-calendar"></i>
 							</div>
 							<div class="squareContent">
-                                <h2 class="counter">5</h2>
+                                <h2 class="counter">4</h2>
                                 <h3>Clients</h3>
-                            </div>  -->
+                            </div>  
 						</div>
 					</div>
 				</div>
 
-<!-- 				<div class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
 								<i class="fa fa-bolt"></i>
 							</div>
 							<div class="squareContent">
-                                <h2 class="counter">2</h2>
-                                <h3>iOS Apps</h3> -->
+                                <h2 class="counter">––</h2>
+                                <h3>iOS Apps</h3> 
                             </div>
 						</div>
 					</div>
 				</div>
 
-<!-- 				<div class="col-md-3 col-sm-6">
+				<div class="col-md-3 col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -313,7 +313,7 @@
 							<div class="squareContent">
                                 <h2 class="counter">4</h2>
                                 <h3>Websites Made</h3>
-                            </div> -->
+                            </div> 
 						</div>
 					</div>
 				</div>
