--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="row">
 
 				
-				<div class="col-md-2 col-sm-12">
+				<div class="col-md col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -276,7 +276,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-2 col-sm-12">
+				<div class="col-md col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -290,7 +290,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-2 col-sm-12">
+				<div class="col-md col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -305,7 +305,7 @@
 					</div>
 				</div>
 				
-				<div class="col-md-2 col-sm-12">
+				<div class="col-md col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
@@ -320,7 +320,7 @@
 					</div>
 				</div>
 
-				<div class="col-md-2 col-sm-12">
+				<div class="col-md col-sm-6">
 					<div class="squareItem">
 						<div class="squareInnerContainer">
 							<div class="squareIcon">
